<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#676565"
    tools:context="info.dicj.distributeur.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/linear1">

            <View
                android:layout_width="match_parent"
                android:layout_height="6px"
                android:layout_marginBottom="8dp"
                android:background="#000000"/>

            <TextView
                android:text="@string/dist_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/textView" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@mipmap/image1"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="6px"
                android:background="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sondage"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/input_nom"/>
            
            <RadioGroup
                android:id="@+id/group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/adore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_adore"/>
                <RadioButton
                    android:id="@+id/adorepas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_pasAdore"/>
            </RadioGroup>

            <CheckBox
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_prevMix_active"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/boissons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:onClick="ajouterBoisson" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pepsi_nom"
                        android:id="@+id/bPepsi"
                        android:layout_column="0"
                        android:layout_weight="50"
                        android:onClick="ajouterBoisson" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orangeade_nom"
                        android:id="@+id/bOrangeade"
                        android:layout_column="1"
                        android:layout_weight="50"
                        android:onClick="ajouterBoisson" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/racinette_nom"
                    android:id="@+id/bRacinette"
                    android:layout_column="0"
                    android:layout_weight="50"
                    android:onClick="ajouterBoisson" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fraise_nom"
                    android:id="@+id/bFraise"
                    android:layout_column="1"
                    android:layout_weight="50"
                    android:onClick="ajouterBoisson" />
                </TableRow>
            </TableLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                    <TextView
                        android:text="@string/saveurs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/saveurs"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/epice_nom"
                        android:id="@+id/sEpice"
                        android:layout_below="@id/saveurs"
                        android:onClick="ajouterSaveur" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bacon_nom"
                        android:id="@+id/sBacon"
                        android:layout_below="@id/saveurs"
                        android:layout_toRightOf="@id/sEpice"
                        android:onClick="ajouterSaveur" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gin_nom"
                        android:id="@+id/sGingembre"
                        android:layout_below="@id/saveurs"
                        android:layout_toRightOf="@id/sBacon"
                        android:onClick="ajouterSaveur" />
            </RelativeLayout>

            <TextView
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/operations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/btn_nouveau"
                android:onClick="nouveau" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:text="@string/btn_verser"
                android:onClick="verser" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/reverser"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:text="@string/btn_verserPrec"
        android:onClick="reverser" />

</LinearLayout>
